--- a/homepage/hugo.toml
+++ b/homepage/hugo.toml
@@ -72,7 +72,7 @@ darkmode = "light"
     display = true
 
     # Order of widgets to display
-    widgets = ["search", "social", "archive", "category", "tags", "recent"]
+    widgets = ["search", "social", "tags", "archive", "recent"]
   
 
 
