--- a/homepage/hugo.toml
+++ b/homepage/hugo.toml
@@ -22,7 +22,7 @@ enableRobotsTXT = true
 base_color = "bg-gray-800"
 
 #Site description
-description = "Blonde theme for Hugo."
+description = "HYPERCUBE Official Website"
 
 # The number of articles to be displayed on a single page.
 paginator_pages = "5"
