--- a/homepage/hugo.toml
+++ b/homepage/hugo.toml
@@ -59,7 +59,7 @@ darkmode = "light"
     # See the Tailwind CSS documentation to set it up.
     # Recommended settings are h-32 to h-48.
     # https://tailwindcss.com/docs/height
-    thumbnail_height = "lg:h-32"
+    thumbnail_height = "lg:h-auto"
 
     # https://tailwindcss.com/docs/width
     thumbnail_width = "lg:w-auto"
