--- a/homepage/package.json
+++ b/homepage/package.json
@@ -10,7 +10,7 @@
     "start": "concurrently npm:watch:*",
     "watch:tw": "tailwindcss -i ./themes/Blonde/assets/css/main.css -o ./themes/Blonde/assets/css/style.css --watch",
     "watch:hugo": "hugo server --buildFuture",
-    "build": "tailwindcss -i ./themes/Blonde/assets/css/main.css -o ./themes/Blonde/assets/css/style.css && hugo --minify"
+    "build": "tailwindcss -i ./themes/Blonde/assets/css/main.css -o ./themes/Blonde/assets/css/style.css && hugo --minify --timeout=60000"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
